--- a/kfc-order.html
+++ b/kfc-order.html
@@ -142,7 +142,7 @@
 <div class="container" id="order-page">
   <h1>KFC Shawarma Order</h1>
   <div class="image-wrapper">
-    <img src="https://images.unsplash.com/photo-1601924928374-8be2145f3bfc?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2hhd2FybWF8fHx8fHx8MTY5Mzg2OTM4Nw&ixlib=rb-4.0.3&q=80&w=400" alt="Delicious Shawarma">
+    <img src="https://kfc-delivery.onrender.com/1756843300444.jpg" alt="Delicious Shawarma">
   </div>
   <p>Price: $30 worth of Ethereum</p>
   <p>Delivery Duration: 1 week steady delivery</p>
@@ -197,3 +197,4 @@
 
 </body>
 </html>
+
